--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
 					</div>
 				</div>
 				<div class="event-img">
-					<img src="img/event.png" alt="">
+					<img src="img/event.png" width="100%" alt="">
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="form-section">
+	<form class="form-section">
 		<div class="container">
 			<div class="form-table">
 			<div class="book-writings">
@@ -150,13 +150,13 @@
 			</div>
 		</div>
 		</div>
-	</div>
+	</form>
 	<div class="footer-section">
 		<div class="container">
 			<div class="top-foot-section">
 				<div class="left-footer">
 					<img src="img/wLogo.png" alt="">
-					<p>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Repudiandae animi, at illum assumenda suscipit! Veniam nobis placeat magnam perferendis tempore corporis numquam deleniti consectetur iure! Assumenda accusantium sequi dolorum beatae.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur, adipisicing elit.<br> Repudiandae animi, at illum assumenda suscipit! Veniam<br> nobis placeat magnam perferendis tempore corporis<br> numquam deleniti consectetur iure! Assumenda<br> accusantium sequi dolorum beatae.</p>
 					<span>© Company Name 2020. All rights reserved.</span>
 				</div>
 				<div class="right-footer">
